Add sample images and update README.md